@@ -220,8 +220,8 @@
 }
 
 @property(nonatomic,retain) NSString* topic;
-@property(nonatomic,retain) id strong;
-@property(nonatomic,assign) id weak;
+@property(nonatomic,retain) id strongRef;
+@property(nonatomic,assign) id weakRef;
 
 + (id)topic:(NSString*)topic strong:(id)strong weak:(id)weak;
 + (id)topic:(NSString*)topic;
