@@ -1,6 +1,9 @@
-Changes from December 25, 2009
+Changes since December 25, 2009
 
 - [DEPRECATED] isWhitespace. Use isWhitespaceAndNewlines instead.
+
+- [XCODE] Refactoring problems solved. TTUserInfo weak/strong properties renamed
+          to weakRef/strongRef, respectively.
 
 - [MINOR] Use __PRETTY_FUNCTION__ for debug logs. (@steipete)
 
